--- a/_config.yaml
+++ b/_config.yaml
@@ -29,7 +29,7 @@ unpublished         : false
 
 # Plugins
 whitelist           : []
-plugins             : []
+plugins             : [jekyll-remote-theme]
 
 # Conversion
 markdown            : kramdown
@@ -69,3 +69,6 @@ kramdown:
   hard_wrap         : false
   footnote_nr       : 1
   show_warnings     : false
+
+# Other Configurations
+remote_theme: pages-themes/modernist@v0.2.0
